tests/idris2/basic/basic003/expected
1/1: Building Ambig1 (Ambig1.idr)
Main> Bye for now!
1/1: Building Ambig2 (Ambig2.idr)
Error: While processing right hand side of keepUnique. Ambiguous elaboration. Possible results:
    Main.Set.toList (Main.Set.fromList xs)
    Main.Vect.toList (Main.Vect.fromList xs)

Ambig2:26:21--26:27
 22 |   export
 23 |   fromList : List a -> Set a
 24 | 
 25 | keepUnique : List b -> List b
 26 | keepUnique {b} xs = toList (fromList xs)
                          ^^^^^^

Main> Bye for now!
